Add ADC support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,14 @@ set ( SOURCES
 		include/drivers/ci2c.h
 		include/drivers/ci2c_smbus.h
 		include/tibbits/i2c/accelerometer.h
+		include/tibbits/i2c/adc.h
 		src/main.cpp
 		src/utilities.cpp
 		src/drivers/cpin.cpp
 		src/drivers/ci2c.cpp
 		src/drivers/ci2c_smbus.cpp
 		src/tibbits/i2c/accelerometer.cpp
+		src/tibbits/i2c/adc.cpp
     )
 
 include_directories( include )
