--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set ( SOURCES
 		include/drivers/ci2c_smbus.h		
 		include/tibbits/i2c/adc.h
 		include/tibbits/i2c/dac.h
+		include/tibbits/i2c/pic.h
 		include/tibbits/i2c/light.h
 		include/tibbits/i2c/humidity.h
 		include/tibbits/i2c/accelerometer.h
@@ -35,6 +36,7 @@ set ( SOURCES
 		src/drivers/ci2c_smbus.cpp		
 		src/tibbits/i2c/adc.cpp
 		src/tibbits/i2c/dac.cpp
+		src/tibbits/i2c/pic.cpp
 		src/tibbits/i2c/light.cpp
 		src/tibbits/i2c/humidity.cpp
 		src/tibbits/i2c/accelerometer.cpp
