--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set ( SOURCES
 		include/tibbits/i2c/pic.h
 		include/tibbits/i2c/light.h
 		include/tibbits/i2c/humidity.h
+		include/tibbits/i2c/pressure.h
 		include/tibbits/i2c/accelerometer.h
 		include/tibbits/i2c/potentiometer.h
 		include/tibbits/i2c/portextender.h
@@ -41,6 +42,7 @@ set ( SOURCES
 		src/tibbits/i2c/pic.cpp
 		src/tibbits/i2c/light.cpp
 		src/tibbits/i2c/humidity.cpp
+		src/tibbits/i2c/pressure.cpp
 		src/tibbits/i2c/accelerometer.cpp
 		src/tibbits/i2c/potentiometer.cpp
 		src/tibbits/i2c/portextender.cpp
