Added I2C example, change headeres dest path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,12 +80,12 @@ set_target_properties( Ltps PROPERTIES SOVERSION "0.1" )
 install( TARGETS Ltps DESTINATION /usr/lib )
 install( TARGETS LtpsStatic DESTINATION /usr/lib )
  
-install( DIRECTORY include/tibbits/i2c/ DESTINATION /usr/include/ltps )
-install( DIRECTORY include/drivers/ DESTINATION /usr/include/ltps )
-install( FILES include/lutils.h DESTINATION /usr/include/ltps )
+install( DIRECTORY include/tibbits/i2c/ DESTINATION /usr/include/ltps/capi )
+install( DIRECTORY include/drivers/ DESTINATION /usr/include/ltps/capi )
+install( FILES include/lutils.h DESTINATION /usr/include/ltps/capi )
 
 install( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs/man/man3 DESTINATION /usr/share/man )
-install( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs/html DESTINATION /usr/share/docs/ltps )
+install( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs/html DESTINATION /usr/share/docs/ltps/capi )
 
 install( FILES LICENSE DESTINATION /usr/share/docs/ltps )
 
