Add GPIO wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ set ( SOURCES
 		include/drivers/cpin.h
 		include/drivers/ci2c.h
 		include/drivers/ci2c_smbus.h
+		include/drivers/gpio.h
 		include/tibbits/i2c/adc.h
 		include/tibbits/i2c/dac.h
 		include/tibbits/i2c/pic.h
@@ -54,6 +55,7 @@ set ( SOURCES
 		src/drivers/cpin.cpp
 		src/drivers/ci2c.cpp
 		src/drivers/ci2c_smbus.cpp
+		src/drivers/gpio.cpp
 		src/tibbits/i2c/adc.cpp
 		src/tibbits/i2c/dac.cpp
 		src/tibbits/i2c/pic.cpp
