--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set ( SOURCES
 		include/drivers/Ci2c.h
 		include/drivers/Ci2c_smbus.h
 		include/drivers/gpio.h
+		include/drivers/Cspi.h
 		include/tibbits/i2c/adc.h
 		include/tibbits/i2c/dac.h
 		include/tibbits/i2c/pic.h
@@ -56,6 +57,7 @@ set ( SOURCES
 		src/drivers/Ci2c.cpp
 		src/drivers/Ci2c_smbus.cpp
 		src/drivers/gpio.cpp
+		src/drivers/Cspi.cpp
 		src/tibbits/i2c/adc.cpp
 		src/tibbits/i2c/dac.cpp
 		src/tibbits/i2c/pic.cpp
