--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set ( SOURCES
 		include/drivers/Ci2c_smbus.h
 		include/drivers/gpio.h
 		include/drivers/Cspi.h
+		include/drivers/Cuart.h
 		include/tibbits/i2c/adc.h
 		include/tibbits/i2c/dac.h
 		include/tibbits/i2c/pic.h
@@ -58,6 +59,7 @@ set ( SOURCES
 		src/drivers/Ci2c_smbus.cpp
 		src/drivers/gpio.cpp
 		src/drivers/Cspi.cpp
+		src/drivers/Cuart.cpp
 		src/tibbits/i2c/adc.cpp
 		src/tibbits/i2c/dac.cpp
 		src/tibbits/i2c/pic.cpp
